# aerosol

./: .gitignore  404.html  Cargo.toml  LICENSE  README.md  compare.html  hashmap.json  index.html  latest-release.json  manual.html  package-lock.json  package.json  robots.txt  sitemap.xml
assets/: app.BAI66Amj.js  blog_file-recovery-mode.md.qri1a_2z.js  blog_file-recovery-mode.md.qri1a_2z.lean.js  blog_index.md.DT-2GG3O.js  blog_index.md.DT-2GG3O.lean.js  blog_introducing-aerosol.md.DucyY_of.js  blog_introducing-aerosol.md.DucyY_of.lean.js  blog_risk-levels-dry-run.md.CdJjmQ9L.js  blog_risk-levels-dry-run.md.CdJjmQ9L.lean.js  blog_safe-cleanup-cross-platform.md.CbuJrVqC.js  blog_safe-cleanup-cross-platform.md.CbuJrVqC.lean.js  compare.md.Bb35lUZJ.js  compare.md.Bb35lUZJ.lean.js  index.md.BzUusBhm.js  index.md.BzUusBhm.lean.js  manual.md.DfvGrF3l.js  manual.md.DfvGrF3l.lean.js  style.cfq97izs.css
blog/: file-recovery-mode.html  index.html  introducing-aerosol.html  risk-levels-dry-run.html  safe-cleanup-cross-platform.html
crates/aerosol_cli/: Cargo.toml
crates/aerosol_cli/src/: main.rs
crates/aerosol_core/: Cargo.toml
crates/aerosol_core/src/: analyzer.rs  cleanup.rs  duplicates.rs  engine.rs  error.rs  lib.rs  rules.rs  scanner.rs  types.rs
crates/aerosol_core/src/ai/: heuristic.rs  mod.rs
crates/aerosol_core/src/platform/: common.rs  linux.rs  macos.rs  mod.rs  recommended.rs  windows.rs
crates/aerosol_core/src/plugin/: mod.rs  registry.rs
crates/aerosol_core/src/plugin/builtins/: android.rs  docker.rs  git.rs  mod.rs  node.rs
crates/aerosol_recovery/: Cargo.toml
crates/aerosol_recovery/src/: carving.rs  disk.rs  error.rs  lib.rs  orchestrator.rs  reconstruct.rs  recover.rs  scanner.rs  signatures.rs  types.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  recovery_bridge.rs
(+41 files in other folders)
