[package]
name = "aerosol-tauri"
version = "0.1.0"
description = "Aerosol — developer-aware disk optimizer"
authors = ["you"]
edition = "2021"

[lib]
name = "aerosol_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aerosol_core = { path = "../crates/aerosol_core" }
aerosol_recovery = { path = "../crates/aerosol_recovery" }
tokio = { version = "1", features = ["sync"] }
