[package]
name = "aerosol_cli"
version = "0.1.0"
description = "CLI for Aerosol disk optimizer"
edition.workspace = true
license.workspace = true

[[bin]]
name = "aerosol"
path = "src/main.rs"

[dependencies]
aerosol_core = { path = "../aerosol_core" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
