[package]
name = "aerosol_core"
version = "0.1.0"
description = "Developer-aware disk scan, rules, plugins, and cleanup engine"
edition.workspace = true
license.workspace = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
trash = "5"
walkdir = "2"
sha2 = "0.10"
hex = "0.4"
